# medical-literature-assistant-V2

./: .gitignore  README.md
backend/: .env.example  DockerFile  pyproject.toml
backend/app/api/: router.py
backend/app/api/v1/: health.py
backend/app/config/: constants.py  database.py  environment.py  logging.py  settings.py
backend/app/core/: application.py  lifespan.py
backend/app/databases/: base.py  engine.py  session.py
backend/app/enums/: environment.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/middleware/: logging.py  request_id.py  security.py
backend/app/schemas/: common.py  health.py
backend/tests/: conftest.py
backend/tests/middleware/: test_logging.py  test_request_id.py  test_security_headers.py
backend/tests/middleware/exceptions/: test_exception_handler.py
backend/tests/unit/middleware/: test_request_id.py  test_security_headers.py
