[project]
name = "medical-literature-assistant"
version = "0.1.0"
description = "Production-grade Medical Literature Assistant RAG Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "gunicorn>=23.0",

    "pydantic>=2.11",
    "pydantic-settings>=2.10",

    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "asyncpg>=0.30",

    "redis>=6.2",

    "httpx>=0.28",

    "structlog>=25.4",

    "python-dotenv>=1.1",

    "orjson>=3.11",

    "python-multipart>=0.0.20",

    "tenacity>=9.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.1",
    "pytest-cov>=6.2",

    "ruff>=0.12",

    "black>=25.1",

    "mypy>=1.17",

    "pre-commit>=4.3"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true